...
        VStack(alignment: .leading) {
            HStack {
                Button(action: {todoCompleted.toggle()}, label: {
                    if todoCompleted {
                        ZStack {
                            Image("circleYellow")
                            Image("tick")
                        }
                    } else {
                        Image("circleGray")
                            
                            .clipped()
                    }
                })
                .frame(width: 24, height: 24)
                
...
