...
    }

    func makeAddNewButton() -> some View {
        Button {
            self.addNewTodo()
        } label: {
            Image("newTask")
        }
    }
    
    func makeBottomToolBarCounter() -> some View {
        Text("\(self.todos.count) Todos")
            .foregroundStyle(Color.accentColor)
...
